--- a/meson.build
+++ b/meson.build
@@ -2,7 +2,23 @@ project('LearningObjectiveGenerator', 'c',
   version : '1.0.0',
   default_options : ['warning_level=3'])
 
-exe = executable('learningobjectivegenerator', 'learningobjectivegenerator.c',
+files = [
+  'src/learningobjectivegenerator.c',
+  'src/objective-options.c',
+]
+
+exe = executable('learningobjectivegenerator', files,
   install : true)
 
-test('basic', exe)
+testArgs = [
+  '-level',
+  '1',
+  '-grade',
+  '1',
+  '-subject',
+  'art',
+  '-domain-level',
+  '0'
+]
+
+test('basic', exe, args: testArgs)
